fix spacing on tags for mobile

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -187,6 +187,7 @@ ul.tag-list {
         color: #fff;
         border-radius: 2px;
         font-size: .8em;
+        margin-right: 4px;
     }
 }
 
